	PR middle-end/14289 	* c-typeck.c (c_mark_addressable): A register variable should 	be considered global if its not automatic, i.e. TREE_PUBLIC, 	TREE_STATIC or DECL_EXTERNAL. 	* function.c (put_var_into_stack): Call abort when placing a 	hard register into the stack, if x_parm_reg_stack_loc is NULL.

* gcc.dg/pr14289-1.c: New test case.
	* gcc.dg/pr14289-2.c: Likewise.
	* gcc.dg/pr14289-3.c: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@79127 138bc75d-0d04-0410-961f-82ee72b054a4